Fix overflowing contact form

--- a/contact.css
+++ b/contact.css
@@ -24,8 +24,8 @@ img.vert {
   .con{
     z-index: 12;
     max-width: 1050px;
-    margin-left: 10%;
-    width: 100%;
+    margin: 10px auto;
+    width: 90%;
     background: rgb(5, 2, 51);
     border-radius: 12px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
